--- a/app/tabs/balance/send/send.component.android.html
+++ b/app/tabs/balance/send/send.component.android.html
@@ -10,18 +10,18 @@
 
         <StackLayout *ngIf="this.step == 1">
             <StackLayout class="body-container" orientation="vertical">
-                <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
+                <Label class="font-italic p-b-15 huge-label" [text]="('SEND.BALANCE' | translate) + ': ' + balance"></Label>
                 <StackLayout class="hr-light"></StackLayout>
                 <GridLayout class="text-left m-t-10" columns="*9, *2" rows="auto, auto">
-                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf2bc; Recipient"></Label>
+                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf2bc; ' + ('SEND.RECIPIENT' | translate)"></Label>
                     <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
                     <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
                 </GridLayout>
                 <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
                 <GridLayout class="text-left m-b-10" columns="100, auto, 70, *" rows="auto, auto">
-                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
+                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf0d6; ' + ('SEND.AMOUNT' | translate)"></Label>
                     <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount" (ngModelChange)="verifyInputs('amount')"></TextField>
-                    <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
+                    <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf0ec; ' + ('SEND.FEE' | translate)"></Label>
                     <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee" (ngModelChange)="verifyInputs('fee')"></TextField>
                     <Label col="1" row="1" rowspan="2" class="p-10 fa text-center" text="+"></Label>
                     <Label col="3" row="1" rowspan="2" class="p-5 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
@@ -29,13 +29,13 @@
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
             <StackLayout class="m-b-20" orientation="vertical">
-                <Button class="btn btn-primary btn-active action-button fa" text="Verify &#xf132;" (tap)="onTapVerify($event)"></Button>
+                <Button class="btn btn-primary btn-active action-button fa" [text]="('SEND.VERIFY' | translate) +  ' &#xf132;'" (tap)="onTapVerify($event)"></Button>
             </StackLayout>
         </StackLayout>
 
         <StackLayout *ngIf="this.step == 2">
             <StackLayout class="body-container" orientation="vertical">
-                <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
+                <Label class="font-italic p-b-15 huge-label" [text]="('SEND.BALANCE' | translate) + ': ' + balance"></Label>
                 <StackLayout class="hr-light"></StackLayout>
                 <GridLayout class="text-left m-t-10 m-b-10" columns="auto, auto, *" rows="auto, auto, auto">
                     <Label col="0" row="0" class="p-t-5 p-b-5 fa" text="&#xf2bc;  "></Label>
@@ -56,10 +56,10 @@
                     <Label textWrap="true" class="solo" text="Enter your pin code!"></Label>
                 </StackLayout>
                 <StackLayout class="body-container m-b-5" orientation="vertical">
-                    <TextField class="input" [(ngModel)]="pin" hint="PIN" keyboardType="number" returnKeyType="done"></TextField>
+                    <TextField class="input" [(ngModel)]="pin" [hint]="'SEND.PIN_INPUT_HINT' | translate" keyboardType="number" returnKeyType="done"></TextField>
                 </StackLayout>
                 <StackLayout class="m-b-20" orientation="vertical">
-                    <Button class="btn btn-primary btn-active action-button fa" text="Accept &#xf05d;" (tap)="onTapAccept($event)"></Button>
+                    <Button class="btn btn-primary btn-active action-button fa" [text]="('SEND.ACCEPT' | translate) +  ' &#xf05d;'" (tap)="onTapAccept($event)"></Button>
                 </StackLayout>
             </StackLayout>
             <StackLayout class="p-20" *ngIf="processing">
