--- a/app/tabs/balance/send/send.component.android.html
+++ b/app/tabs/balance/send/send.component.android.html
@@ -1,7 +1,7 @@
 <ActionBar class="action-bar">
     <StackLayout orientation="horizontal">
         <Image class="logo-tiny m-r-15" src="res://logo"></Image>
-        <Label class="action-bar-title" text="Send BURST"></Label>
+        <Label class="action-bar-title" [text]="'SEND.ACTION_BAR_TITLE' | translate"></Label>
     </StackLayout>
 </ActionBar>
 
