--- a/app/tabs/balance/balance.component.android.html
+++ b/app/tabs/balance/balance.component.android.html
@@ -13,11 +13,7 @@
                 <Label *ngIf="confirmed" class="font-weight-bold p-t-10 p-b-10" [text]="('TABS.BALANCE.BALANCE' | translate) + ': ' + balance"></Label>
                 <Label *ngIf="!confirmed" class="font-weight-bold p-t-10 p-b-10 fa" [text]="'Balance: ' + balance + ' &#xf021;'"></Label>
                 <StackLayout class="hr-light"></StackLayout>
-                <GridLayout class="p-t-10 p-b-10" columns="*,auto,*" rows="auto">
-                    <Label col="0" class="font-weight-bold  m-r-10 text-right" [text]="marketService.getPriceBTC(account.balance)"></Label>
-                    <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
-                    <Label col="2" class="font-weight-bold m-l-10 text-left" [text]="marketService.getPriceFiatCurrency(account.balance)"></Label>
-                </GridLayout>
+                <Label class="font-weight-bold text-center fa p-t-10 p-b-10" [text]="marketService.getPriceBTC(account.balance) + '  &#xf0ec;  ' + marketService.getPriceFiatCurrency(account.balance)"></Label>
             </StackLayout>
             <StackLayout orientation="vertical">
                 <Button *ngIf="account?.type == 'active'" class="btn btn-primary btn-active action-button fa" [text]="('TABS.BALANCE.SEND' | translate) + ' &#xf08b;'" [nsRouterLink]="['/tabs/balance/send']"></Button>
