--- a/app/tabs/accounts/accounts.component.ios.html
+++ b/app/tabs/accounts/accounts.component.ios.html
@@ -4,8 +4,8 @@
             <StackLayout>
                 <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, auto *, auto" rows="auto, auto, auto, auto">
                     <Label col="0" row="0" colspan="4" [text]="item.address"></Label>
-                    <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
-                    <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
+                    <Label [visibility]="item.selected ? 'visible' : 'collapse'" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
+                    <Label [visibility]="!item.selected ? 'visible' : 'collapse'" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
 
                     <Label col="0" row="1" colspan="3" rowspan="2" class="balance text-center" [text]="('TABS.ACCOUNTS.BALANCE' | translate) + ': ' + item.balance + ' BURST'"></Label>
 
