--- a/app/tabs/accounts/accounts.component.ios.html
+++ b/app/tabs/accounts/accounts.component.ios.html
@@ -1,5 +1,5 @@
 <GridLayout rows="*">
-    <RadListView row="0" [items]="accounts" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)" separatorColor="transparent">
+    <RadListView #radListView row="0" [items]="accounts" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)" separatorColor="transparent">
         <ng-template let-item="item" let-i="index">
             <StackLayout>
                 <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, auto *, auto" rows="auto, auto, auto, auto">
