--- a/app/tabs/balance/balance.component.ios.html
+++ b/app/tabs/balance/balance.component.ios.html
@@ -1,8 +1,8 @@
 <GridLayout rows="*">
-    <RadListView #radListView row="0" [items]="[0]" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)">
+    <RadListView #radListView row="0" [items]="[0]" (swipe)="onSwipeBalance($event)" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)">
         <ng-template tkListItemTemplate let-item="item" let-i="index">
             <StackLayout orientation="vertical">
-                <StackLayout (doubleTap)="onDoubleTapBalance()" (longPress)="onLongPressBalance()" (swipe)="onSwipeBalance($event)" class="balance-container" orientation="vertical">
+                <StackLayout (doubleTap)="onDoubleTapBalance()" (longPress)="onLongPressBalance()" class="balance-container" orientation="vertical">
                     <Image *ngIf="loading == false" class="qrcode" [src]="qrcode"></Image>
                     <StackLayout *ngIf="loading" class="p-30" orientation="vertical">
                         <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
