--- a/app/tabs/balance/balance.component.android.html
+++ b/app/tabs/balance/balance.component.android.html
@@ -1,4 +1,4 @@
-<RadListView [items]="[0]" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)">
+<RadListView #radListView [items]="[0]" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)">
     <ng-template tkListItemTemplate let-item="item" let-i="index">
         <StackLayout orientation="vertical">
             <StackLayout (doubleTap)="onDoubleTapBalance()" (longPress)="onLongPressBalance()" (swipe)="onSwipeBalance($event)" class="balance-container" orientation="vertical">
