--- a/app/tabs/accounts/activate/activate.component.android.html
+++ b/app/tabs/accounts/activate/activate.component.android.html
@@ -26,6 +26,10 @@
             </StackLayout>
 
             <StackLayout *ngIf="step == 2">
+                <StackLayout class="info-container" orientation="vertical">
+                    <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                    <Label textWrap="true" class="bottom" [text]="'TABS.ACCOUNTS.ACTIVATE.ENTER_PIN' | translate"></Label>
+                </StackLayout>
                 <StackLayout class="body-container m-b-20" orientation="vertical">
                     <TextField class="input" [(ngModel)]="pin" [hint]="'TABS.ACCOUNTS.ACTIVATE.PIN_INPUT_HINT' | translate" keyboardType="number" returnKeyType="done"></TextField>
                     <Button class="btn btn-primary btn-active action-button fa" [text]="('TABS.ACCOUNTS.ACTIVATE.DONE' | translate) + ' &#xf05d;'" (tap)="onTapDone()"></Button>
