secure PIN input field

--- a/app/tabs/accounts/activate/activate.component.ios.html
+++ b/app/tabs/accounts/activate/activate.component.ios.html
@@ -30,7 +30,7 @@
                 <Label textWrap="true" class="bottom" [text]="'TABS.ACCOUNTS.ACTIVATE.ENTER_PIN' | translate"></Label>
             </StackLayout>
             <StackLayout class="body-container m-b-20" orientation="vertical">
-                <TextField class="input m-b-10" [(ngModel)]="pin" [hint]="'TABS.ACCOUNTS.ACTIVATE.PIN_INPUT_HINT' | translate" keyboardType="number" returnKeyType="done"></TextField>
+                <TextField class="input m-b-10" [(ngModel)]="pin" [hint]="'TABS.ACCOUNTS.ACTIVATE.PIN_INPUT_HINT' | translate" keyboardType="number" returnKeyType="done" secure="true"></TextField>
                 <Button class="btn btn-primary btn-active action-button fa" [text]="('TABS.ACCOUNTS.ACTIVATE.DONE' | translate) + ' &#xf05d;'" (tap)="onTapDone()"></Button>
             </StackLayout>
         </StackLayout>
