--- a/app/tabs/accounts/accounts.component.android.html
+++ b/app/tabs/accounts/accounts.component.android.html
@@ -1,7 +1,7 @@
 <RadListView #radListView [items]="accounts" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)" separatorColor="transparent">
     <ng-template let-item="item" let-i="index">
         <StackLayout>
-            <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, auto *, auto" rows="auto, auto, auto, auto">
+            <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, *, auto, auto" rows="auto, auto, auto, auto">
                 <Label col="0" row="0" colspan="4" [text]="item.address"></Label>
                 <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
                 <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
